# PrimeChecker

./: CMakeLists.txt  resultform.cpp  resultform.ui
src/: mainwindow.cpp  primchecker.cpp  primechecker.cpp  primechecker.h  resultform.cpp
ui/: mainwindow.ui
